# pyeXF1LT

./: .gitignore  README.md  discord.env.example  setup.cfg  twitter.env.example
.github/workflows/: codeql.yml  release.yml
examples/: bot.py  bot_webhook.py  discord_bot.py  message_logger.py  twitter_bot.py
exfolt/: __init__.py  _client.py  _discord.py  _main.py  _model.py  _signalr.py  _type.py  _utils.py
