[metadata]
name = exfolt
version = 0.2.0
url = https://github.com/eXhumer/pyeXF1LT
author = eXhumer
author_email = exhumer@exhumer.cc
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE.md
description = Unofficial F1 live timing client
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.9
zip_safe = False
packages = exfolt
install_requires =
    requests
    requests-toolbelt
    websocket-client

[options.extras_require]
discord =
    exdc
twitter =
    extc
