[metadata]
name = exfolt
version = 0.11.0b1
url = https://github.com/eXhumer/pyeXF1LT
author = eXhumer
author_email = exhumer@exhumer.cc
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = AGPL-3.0-only
license_files = COPYING
description = Unofficial F1 live timing client
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.9
zip_safe = False
packages = exfolt
install_requires =
    python-dotenv
    requests
    websocket-client

[options.extras_require]
discord =
    exdc ==0.1.0b1

[options.entry_points]
console_scripts =
    eXF1LT = exfolt._main:__program_main

[flake8]
max-line-length = 99
